Make sure slide numbers and arrows don't overlap

--- a/styles/reveal-js/slides.css
+++ b/styles/reveal-js/slides.css
@@ -224,6 +224,7 @@ li {
 
 .reveal .controls {
     color: var(--hogent-blue);
+    right: 5em;
 }
 
 .reveal .slide-number {
